fixes white space issues on headers

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -128,7 +128,7 @@ header {
     color: #FFFFF0;
 }
 
-.creator-link {
+.creator-home-name{
     display: block;
     color: #8B5A2B;
     font-family: 'Playfair', serif;
@@ -139,12 +139,14 @@ header {
     text-align: center;
 }
 
-.creator-link:hover {
-    color: #699C6B;
-}
 
 .newsletter-section {
     text-align: center;
+}
+
+.newsletter-image {
+  width: 50%;
+  margin: 10px;
 }
 
 .custom-submit-button {
@@ -172,15 +174,10 @@ header {
     font-family: 'Playfair', serif;
 }
 
-.newsletter-image {
-    width: 70%;
-    margin: 10px;
-}
-
 .footer {
     background-color: #FFFFF0;
     padding: 30px 0;
-    margin: 40px;
+    margin: 50px;
     border-top: 0.5px solid #8B5A2B;
     text-align: center;
     margin-top: auto; 
@@ -247,8 +244,8 @@ header {
   }
   
   .creator-header {
-    margin-top: 15em;
-    margin-left: 2em;
+    margin-top: 50px;;
+    margin-left: 50px;
     text-align: center;
   }
 
@@ -318,8 +315,8 @@ header {
 }
 
 .testimonials-head {
-  margin-top: 12em;
-  margin-left: 2em;
+  margin-top: 50px;
+  margin-left: 50px;;
   text-align: center;
 }
 
@@ -371,25 +368,9 @@ header {
   color:#CDA3A3
 }
 
-.flash-message {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 2em;
-}
-
-.messages {
-  border:#699C6B 3px solid;
-  border-radius: 20px;
-  font-family:'Josefin Sans', sans-serif;
-  background-color:#699C6B;
-  color:#FFFFF0;
-  padding: 1.5em;
-}
-
 .product-head {
-  margin-top: 12em;
-  margin-left: 2em;
+  margin-top: 50px;
+  margin-left: 50px;
   text-align: center;
 }
 .products-title {
